--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 config.txt
 __pycache__/investing_data.cpython-37.pyc
 __pycache__/investing_data.cpython-37.pyc
+.vscode/settings.json
+__pycache__/investing_data.cpython-37.pyc
+__pycache__/investing_strategy.cpython-37.pyc
